# AvgRatingReport

./: .gitignore  README.MD  main.py  pyproject.toml
src/: report_factory.py  reports.py  utils.py
tests/: conftest.py  test_report_factory.py  test_reports.py  test_utils.py
